
SET(ENGINE_NAME morsEngine)
SET(ENGINE_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/)
message(STATUS "Generating project file for example in ${ENGINE_FOLDER}")
file(GLOB SOURCE *.cpp ${BASE_HEADERS} ${ENGINE_FOLDER}/*.cpp)
SET(MAIN_CPP ${ENGINE_FOLDER}/${ENGINE_NAME}.cpp)
if(EXISTS ${ENGINE_FOLDER}/main.cpp)
    SET(MAIN_CPP ${ENGINE_FOLDER}/main.cpp)
ENDIF()
if(EXISTS ${ENGINE_FOLDER}/${ENGINE_NAME}.h)
    SET(MAIN_HEADER ${ENGINE_FOLDER}/${ENGINE_NAME}.h)
ENDIF()
# imgui example requires additional source files
IF(${ENGINE_NAME} STREQUAL "imgui")
    file(GLOB ADD_SOURCE "../external/imgui/*.cpp")
    SET(SOURCE ${SOURCE} ${ADD_SOURCE})
ENDIF()
# wayland requires additional source files
IF(USE_WAYLAND_WSI)
    SET(SOURCE ${SOURCE} ${CMAKE_BINARY_DIR}/xdg-shell-client-protocol.h ${CMAKE_BINARY_DIR}/xdg-shell-protocol.c)
ENDIF()
# Add shaders
set(SHADER_DIR_GLSL "../shaders/glsl/${ENGINE_NAME}")
file(GLOB SHADERS_GLSL "${SHADER_DIR_GLSL}/*.vert" "${SHADER_DIR_GLSL}/*.frag" "${SHADER_DIR_GLSL}/*.comp" "${SHADER_DIR_GLSL}/*.geom" "${SHADER_DIR_GLSL}/*.tesc" "${SHADER_DIR_GLSL}/*.tese" "${SHADER_DIR_GLSL}/*.mesh" "${SHADER_DIR_GLSL}/*.task" "${SHADER_DIR_GLSL}/*.rgen" "${SHADER_DIR_GLSL}/*.rchit" "${SHADER_DIR_GLSL}/*.rmiss" "${SHADER_DIR_GLSL}/*.rcall" "${SHADER_DIR_GLSL}/*.rahit" "${SHADER_DIR_GLSL}/*.rint" "${SHADER_DIR_GLSL}/*.glsl")
set(SHADER_DIR_HLSL "../shaders/hlsl/${ENGINE_NAME}")
file(GLOB SHADERS_HLSL "${SHADER_DIR_HLSL}/*.vert" "${SHADER_DIR_HLSL}/*.frag" "${SHADER_DIR_HLSL}/*.comp" "${SHADER_DIR_HLSL}/*.geom" "${SHADER_DIR_HLSL}/*.tesc" "${SHADER_DIR_HLSL}/*.tese" "${SHADER_DIR_HLSL}/*.mesh" "${SHADER_DIR_HLSL}/*.task" "${SHADER_DIR_HLSL}/*.rgen" "${SHADER_DIR_HLSL}/*.rchit" "${SHADER_DIR_HLSL}/*.rmiss" "${SHADER_DIR_HLSL}/*.rcall" "${SHADER_DIR_HLSL}/*.rahit" "${SHADER_DIR_HLSL}/*.rint")
set(SHADER_DIR_SLANG "../shaders/slang/${ENGINE_NAME}")
file(GLOB SHADERS_SLANG "${SHADER_DIR_SLANG}/*.slang")
source_group("Shaders\\GLSL" FILES ${SHADERS_GLSL})
source_group("Shaders\\HLSL" FILES ${SHADERS_HLSL})
source_group("Shaders\\SLANG" FILES ${SHADERS_SLANG})
# Add optional readme / tutorial
file(GLOB README_FILES "${ENGINE_FOLDER}/*.md")
if(WIN32)
    add_executable(${ENGINE_NAME} WIN32 ${MAIN_CPP} ${SOURCE} ${MAIN_HEADER} ${SHADERS_GLSL} ${SHADERS_HLSL} ${SHADERS_SLANG} ${README_FILES})
    target_link_libraries(${ENGINE_NAME} base Vulkan::Vulkan ${WINLIBS})
else(WIN32)
    add_executable(${ENGINE_NAME} ${MAIN_CPP} ${SOURCE} ${MAIN_HEADER} ${SHADERS_GLSL} ${SHADERS_HLSL} ${SHADERS_SLANG} ${README_FILES})
    target_link_libraries(${ENGINE_NAME} base )
endif(WIN32)

file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set_target_properties(${ENGINE_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
if(${ENGINE_NAME} STREQUAL "texture3d")
    if(APPLE)
        # SRS - Use MacPorts paths as default since the same on x86 and Apple Silicon, can override for homebrew on cmake command line
        if(NOT OpenMP_omp_LIBRARY AND EXISTS /opt/local/lib/libomp/libomp.dylib)
            set(OpenMP_omp_LIBRARY /opt/local/lib/libomp/libomp.dylib)
        endif()
        if(CMAKE_C_COMPILER_ID MATCHES "Clang\$")
            set(OpenMP_C_FLAGS "-Xclang -fopenmp")
            set(OpenMP_C_LIB_NAMES "omp")
            if(NOT OpenMP_C_INCLUDE_DIR AND EXISTS /opt/local/include/libomp)
                set(OpenMP_C_INCLUDE_DIR /opt/local/include/libomp)
            endif()
        endif()
        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang\$")
            set(OpenMP_CXX_FLAGS "-Xclang -fopenmp")
            set(OpenMP_CXX_LIB_NAMES "omp")
            if(NOT OpenMP_CXX_INCLUDE_DIR AND EXISTS /opt/local/include/libomp)
                set(OpenMP_CXX_INCLUDE_DIR /opt/local/include/libomp)
            endif()
        endif()
    endif()
    find_package(OpenMP)
    if(OpenMP_CXX_FOUND)
        set_target_properties(${ENGINE_NAME} PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS})
        target_include_directories(${ENGINE_NAME} PRIVATE ${OpenMP_CXX_INCLUDE_DIRS})
        target_link_libraries(${ENGINE_NAME} ${OpenMP_CXX_LIBRARIES})
    endif()
endif()

if(RESOURCE_INSTALL_DIR)
    install(TARGETS ${ENGINE_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()